--- a/WebChat/WebChat.WebClient/index.html
+++ b/WebChat/WebChat.WebClient/index.html
@@ -4,6 +4,13 @@
     <title></title>
 </head>
 <body>
+    <script src="Scripts/jquery-2.0.3.min.js"></script>
+    <script src="Scripts/class.js"></script>
+    <script src="Scripts/http-requester.js"></script>
+    <script src="Scripts/ui.js"></script>
+    <script src="Scripts/persister.js"></script>
+    <script src="Scripts/controller.js"></script>
 
+    <div id="content"></div>
 </body>
 </html>
