Super mega giga big commit - fixing controllers (working correctly now) and client interface.

--- a/WebChat/WebChat.WebClient/TestIndex.html
+++ b/WebChat/WebChat.WebClient/TestIndex.html
@@ -17,7 +17,7 @@
 
     <script src="Scripts/jquery-2.0.3.min.js"></script>
     <script>
-        $("#uploadImageForm").submit(function (e) { e.stopPropagation(); });
+        $("#uploadImageForm").submit(function (e) { e.preventDefault(); });
     </script>
 </body>
 </html>
