--- a/WebChat/WebChat.WebClient/index.html
+++ b/WebChat/WebChat.WebClient/index.html
@@ -2,9 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
+    <link href="Styles/style.css" rel="stylesheet" />
 </head>
 <body>
     <script src="Scripts/jquery-2.0.3.min.js"></script>
+    <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha1.js"></script>
     <script src="Scripts/class.js"></script>
     <script src="Scripts/http-requester.js"></script>
     <script src="Scripts/ui.js"></script>
