--- a/WebChat/WebChat.WebClient/index.html
+++ b/WebChat/WebChat.WebClient/index.html
@@ -5,6 +5,13 @@
     <link href="Styles/style.css" rel="stylesheet" />
 </head>
 <body>
+    <div
+        pub-key="pub-c-90df6afa-5804-4bbc-a401-7b8ae210ad93"
+        sub-key="sub-c-d8e4713e-0512-11e3-8dc9-02ee2ddab7fe"
+        ssl="off" origin="pubsub.pubnub.com" id="pubnub">
+    </div>
+
+    <script src="http://cdn.pubnub.com/pubnub-3.1.min.js"></script>
     <script src="Scripts/jquery-2.0.3.min.js"></script>
     <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha1.js"></script>
     <script src="Scripts/class.js"></script>
