--- a/WebChat/WebChat.WebClient/PartialHtmls/LoginRegister.html
+++ b/WebChat/WebChat.WebClient/PartialHtmls/LoginRegister.html
@@ -4,7 +4,7 @@
             <label for="tb-login-username">Username: </label>
             <input type="text" id="tb-login-username"><br />
             <label for="tb-login-password">Password: </label>
-            <input type="text" id="tb-login-password"><br />
+            <input type="password" id="tb-login-password"><br />
             <button id="btn-login" class="button">Login</button>
         </div>
         <div id="register-form" style="display: none">
@@ -15,7 +15,7 @@
             <label for="tb-register-username">Username: </label>
             <input type="text" id="tb-register-username"><br />
             <label for="tb-register-password">Password: </label>
-            <input type="text" id="tb-register-password"><br />
+            <input type="password" id="tb-register-password"><br />
             <button id="btn-register" class="button">Register</button>
         </div>
         <a href="#" id="btn-show-login" class="button selected">Login</a>
