Adding CSS (making it shiny).

--- a/WebChat/WebChat.WebClient/PartialHtmls/ProfilePicture.html
+++ b/WebChat/WebChat.WebClient/PartialHtmls/ProfilePicture.html
@@ -1,6 +1,11 @@
-﻿<form id="uploadImageForm" enctype="multipart/form-data">
-    <input name="file" type="file" />
-    <input type="submit" id="Upload" value="Upload" />
-</form>
+﻿<div id="chat-title">WEB CHAT APPLICATION</div>
+<div id="profile-info-holder">
+    <form id="uploadImageForm" enctype="multipart/form-data">
+        <input name="file" type="file" />
+        <input type="submit" id="Upload" value="Upload" />
+    </form>
+    <button id="btn-logout">Logout</button>
+</div>
+<div id="messages-wrapper"></div>
+<div id="online-users-holder"></div>
 
-<button id="btn-logout">Logout</button>
