--- a/WebChat/WebChat.WebClient/index.html
+++ b/WebChat/WebChat.WebClient/index.html
@@ -20,10 +20,11 @@
     <script src="Scripts/persister.js"></script>
     <script src="Scripts/controller.js"></script>
     
-    <div id="content"></div>
+    <div id="content">
+        
+    </div>
 
-    //----------------------------------------------
-    <div id="chat-container">
+    <!--<div id="chat-container">
         <div id="chat-title">WEB CHAT APPLICATION</div>
         <div id="online-users-container">
             <div id="online-users-heading">USERS ONLINE</div>
@@ -59,7 +60,7 @@
                 </form>
             </div>
         </div>
-    </div>
+    </div>-->
 
 </body>
 </html>
