Added AJAX image upload

--- a/WebChat/WebChat.WebClient/PartialHtmls/ProfilePicture.html
+++ b/WebChat/WebChat.WebClient/PartialHtmls/ProfilePicture.html
@@ -2,18 +2,33 @@
     <div class="demo-section">
         <form method="post" id="uploadImageForm" enctype="multipart/form-data"
             action="http://localhost:49530/api/user/uploadImage">
-            <input type="file" name="files" id="files" />
+            <input type="file" name="profilePicture" />
             <input type="submit" />
         </form>
     </div>
 </div>
+
 <button id="btn-logout">Logout</button>
+
 <script>
-    var sessionKey = controller.persister.sessionKey();
-    var currentAction = $("#uploadImageForm").attr("action");
-    $("#uploadImageForm").attr("action", currentAction + "?sessionKey=" + sessionKey);
+    (function () {
+        var sessionKey = controller.persister.sessionKey();
+        var currentAction = $("#uploadImageForm").attr("action");
+        $("#uploadImageForm").attr("action", currentAction + "?sessionKey=" + sessionKey);
 
-    $("#uploadImageForm").submit(function (e) {
+        $("#uploadImageForm").submit(function (e) {
+            e.preventDefault();
 
-    });
+            var data = new FormData(this);
+
+            //var file = $(this).find('[name=profilePicture]')[0].files;
+            //data.append(controller.persister.username(), file);
+
+            controller.persister.user.uploadProfilePicture(data, function () {
+                console.log("Picture uploaded.");
+            }, function () {
+
+            });
+        });
+    }());
 </script>
